--- a/tweeter_frontend/index.html
+++ b/tweeter_frontend/index.html
@@ -7,15 +7,14 @@
         <title>Document</title>
     </head>
     <body>
-        <section class="new-tweet">
-          <div class="left">
-            <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c53e.png"/>
-          </div>
-          <div class="right">
-            <textarea type="text" placeholder="What's happening?" id="tweet"></textarea>
-            <button>Tweet</button>
-          </div>
-        </section>
+        <form id="login-form">
+          <h1>Tweeter</h1>
+          <label>Username</label>
+          <input name="username" />
+          <label>Password</label>
+          <input type="password" name="password" />
+          <input type="submit" value="Login" />
+        </form>
         <script src="app.js"></script>
     </body>
 </html>
